@@ -10,7 +10,6 @@
  <body class="$bozz">
   <ul py:attrs="{'id': 'second', 'class': None}" py:if="len(items) > 0">
    <li py:for="item in items">Item $prefix${item.split()[-1]}</li>
-   XYZ ${hey}
   </ul>
   ${macro1()} ${macro1()} ${macro1()}
   ${macro2('john')}
